# exploring-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.cmd
app/: .env.example  db.py  dependencies.py  main.py  settings.py
app/models/: roles.py  users.py
app/routes/: auth.py  users.py
app/seeders/: role_seeder.py
app/utils/: auth_utils.py
src/app/: dependencies.py  main.py  settings.py
src/app/mappers/: user_mapper.py
src/app/models/: roles.py
src/app/routes/: auth.py  users.py
src/app/schemas/: jwt_schemas.py  user_schemas.py
src/app/seeders/: role_seeder.py  seeder.py  user_seeder.py
