[project]
name = "myfapi-app"
version = "0.1.0"
description = "Exploring FastAPI"
authors = [
    {name = "montexbjeliseo", email = "secondmtx@gmail.com"},
]
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "async-timeout==4.0.3",
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "cffi==1.16.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cryptography==42.0.5",
    "dnspython==2.6.1",
    "ecdsa==0.19.0",
    "email-validator==2.1.1",
    "fastapi==0.110.3",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "idna==3.7",
    "install==1.3.5",
    "passlib==1.7.4",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pydantic-core==2.18.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.29",
    "starlette==0.37.2",
    "typing-extensions==4.11.0",
    "uvicorn==0.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev.cmd = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
dev.working_dir = "src"